--- a/app/src/main/res/layout/fragment_company_details.xml
+++ b/app/src/main/res/layout/fragment_company_details.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_top_round_white"
     tools:context=".Fragment.CompanyDetailsFragment">
 
@@ -194,6 +194,7 @@
                 android:text="Date Of Relieving"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@+id/rDateEt"
                 app:layout_constraintTop_toBottomOf="@+id/annualLeaveEt" />
 
@@ -234,6 +235,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="#80282729"
                 android:textSize="14sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/jDateEt"
@@ -270,12 +272,12 @@
 
                     <RadioButton
                         android:id="@+id/rb_active"
-                        android:clickable="false"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:layout_weight="1"
                         android:buttonTint="@color/mainColor"
+                        android:clickable="false"
                         android:text="Active"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
@@ -284,11 +286,11 @@
                     <RadioButton
                         android:id="@+id/rb_inactive"
                         android:layout_width="wrap_content"
-                        android:clickable="false"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:layout_weight="1"
                         android:buttonTint="@color/mainColor"
+                        android:clickable="false"
                         android:text="Inactive"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
@@ -311,22 +313,22 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 app:cardCornerRadius="15dp"
                 app:cardElevation="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/note">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:background="@color/white"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@color/white">
 
                     <TextView
                         android:id="@+id/tv"
@@ -426,7 +428,6 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnNext"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
@@ -438,6 +439,7 @@
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
