--- a/app/src/main/res/layout/activity_inside_event.xml
+++ b/app/src/main/res/layout/activity_inside_event.xml
@@ -92,7 +92,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/edittext_layout"
             android:gravity="start"
-
+            android:id="@+id/title"
             android:paddingHorizontal="5dp"
             android:paddingVertical="5dp"
             android:text="Employee birthday party"
@@ -113,6 +113,7 @@
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -140,6 +141,7 @@
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -167,6 +169,7 @@
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
