--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -113,10 +113,10 @@
                     android:textStyle="normal" />
 
                 <TextView
+                    android:id="@+id/all"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="30"
-
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -141,6 +141,7 @@
                     android:textStyle="normal" />
 
                 <TextView
+                    android:id="@+id/present"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20"
@@ -169,6 +170,7 @@
                     android:textStyle="normal" />
 
                 <TextView
+                    android:id="@+id/absent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10"
@@ -214,8 +216,8 @@
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatImageButton
-                android:layout_width="match_parent"
                 android:id="@+id/txtRight"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -234,13 +236,35 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/secondLl" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <TextView
+            android:id="@+id/noData"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="3dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="4dp"
+            android:gravity="center"
+            android:text="No Data Available"
+            android:textAlignment="center"
+            android:textColor="@color/bluetext"
+            android:textSize="21sp"
+
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="3dp"
+
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="4dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
