--- a/app/src/main/res/layout/popup_overtime.xml
+++ b/app/src/main/res/layout/popup_overtime.xml
@@ -145,6 +145,8 @@
         android:inputType="numberDecimal"
         android:padding="5dp"
         android:textColor="@color/black"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:textColorHint="@color/txtGray"
         app:layout_constraintEnd_toEndOf="@id/secondLL"
         app:layout_constraintStart_toStartOf="@id/secondLL"
@@ -153,6 +155,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/submitBtn"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
