--- a/app/src/main/res/layout/rv_month_attendance_layout.xml
+++ b/app/src/main/res/layout/rv_month_attendance_layout.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="100dp"
+    android:background="@color/white"
     android:orientation="horizontal"
     android:weightSum="3">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="@color/white"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:background="@color/white"
         android:weightSum="3">
 
         <androidx.cardview.widget.CardView
@@ -28,9 +28,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:background="@color/white"
                 android:orientation="vertical"
                 android:padding="13dp"
-                android:background="@color/white"
                 android:weightSum="2">
 
                 <TextView
@@ -89,6 +89,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="top|center_horizontal"
+                android:maxLength="5"
                 android:text="12:00"
                 android:textColor="@color/black"
                 android:textSize="14sp"
@@ -124,6 +125,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="top|center_horizontal"
+                android:maxLength="5"
                 android:text="08:00"
                 android:textColor="@color/black"
                 android:textSize="14sp"
